Creates answers and questions buttons

--- a/client/battle.html
+++ b/client/battle.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Battle Page</title>
+    <link rel="stylesheet" href="./battle.css ">
 </head>
 <body>
+    <section id="box">
+        <div id ="questionBox">
+            <p id="questionNum"> question number</p>
+            <p id="question"> actual question</p>
+        </div>
+        <div id ="answers">
+            <p class="choice"> first correct </p>
+            <p class="choice"> second incorrect</p>
+            <p class="choice"> third incorrect</p>
+            <p class="choice"> fourth incorrect</p>
+        </div>
+    </section>
     
 </body>
 </html>
