adds non funcitional random question selection and answer randomisation

--- a/client/battle.html
+++ b/client/battle.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Page</title>
+    <script defer src="./battle.js"></script>
     <link rel="stylesheet" href="./battle.css ">
 </head>
 <body>
@@ -13,10 +14,10 @@
             <p id="question"> actual question</p>
         </div>
         <div id ="answers">
-            <p class="choice"> first correct </p>
-            <p class="choice"> second incorrect</p>
-            <p class="choice"> third incorrect</p>
-            <p class="choice"> fourth incorrect</p>
+            <p id="answer1"> first correct </p>
+            <p id="answer2"> second incorrect</p>
+            <p id="answer3"> third incorrect</p>
+            <p id="answer4"> fourth incorrect</p>
         </div>
     </section>
     
