General layout and styling for the hub page

--- a/client/hub.html
+++ b/client/hub.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tudemon</title>
+    <script defer src="hub.js"></script>
+    <link rel="stylesheet" href="hub.css">
 </head>
 <body>
-    
+    <div id="titleBox">
+        <h1>Tudemon</h1>
+    </div>
+    <div id="backgroundBox">
+        <div id="pannelBox">
+            <h2>Henry VIII</h2>
+                <img id="henry" alt="HenryVIII" src="assets/Henry.jpg">
+                <img id="symbol" alt="Symbol" src="assets/image.png">
+        </div>
+    </div>
 </body>
 </html>
