Adds icon, answers and question boxes

--- a/client/battle.html
+++ b/client/battle.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Page</title>
     <link rel="stylesheet" href="./battle.css ">
+    <link rel="icon"  href = "./assets/hip.ico" type="img">
 </head>
 <body>
+    <div class="avatar1"></div>
+    <div class="avatar2"></div>
     <section id="box">
         <div id ="questionBox">
             <p id="questionNum"> question number</p>
