Added better styling, background picture and audio

--- a/client/hub.html
+++ b/client/hub.html
@@ -6,10 +6,15 @@
     <title>Tudemon</title>
     <script defer src="hub.js"></script>
     <link rel="stylesheet" href="hub.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="titleBox">
-        <h1>Tudemon</h1>
+    <audio src="assets/Y2meta.app - King Henry VIII - Consort Music (128 kbps).mp3" autoplay>
+      </audio>
+    <div id="titleBoxBackground">
+        <div id="titleBox">
+           <h1>Tudemon</h1>
+        </div>
     </div>
     <div id="backgroundBox">
         <div id="pannelBox">
