Adds CSS main features, background and boarbox

--- a/client/battle.html
+++ b/client/battle.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./battle.css ">
     <link rel="icon"  href = "./assets/hip.ico" type="img">
 </head>
-<body>
+<body id="mainBox">
     <div class="avatar1"></div>
     <div class="avatar2"></div>
-    <section id="box">
+    <section id="boardBox">
         <div id ="questionBox">
             <p id="questionNum"> question number</p>
             <p id="question"> actual question</p>
@@ -23,6 +23,5 @@
             <p id="answer4"> fourth incorrect</p>
         </div>
     </section>
-    
 </body>
 </html>
