Changes icon size

--- a/client/battle.html
+++ b/client/battle.html
@@ -6,7 +6,7 @@
     <title>Battle Page</title>
     <script defer src="./battle.js"></script>
     <link rel="stylesheet" href="./battle.css ">
-    <link rel="icon"  href = "./assets/hip.ico" type="img">
+    <link rel="icon" type="image/png" href="./assets/icon.png" sizes="64x64">
 </head>
 <body id="mainBox">
     <div class="avatar1"></div>
