Added POST method to create new questions, created post.js, post.css , post.html and linked html files

--- a/client/hub.html
+++ b/client/hub.html
@@ -13,6 +13,10 @@
       </audio>
     <div id="titleBoxBackground">
         <div id="titleBox">
+            <p>Click the button below to go to the form page:</p>
+     <a href="post.html">
+        <button>Go to Form</button>
+    </a>
            <h1>Tudemon</h1>
         </div>
     </div>
@@ -20,7 +24,9 @@
         <div id="pannelBox">
             <h2>Henry VIII</h2>
                 <img id="henry" alt="HenryVIII" src="assets/Henry.jpg">
-                <img id="symbol" alt="Symbol" src="assets/image.png">
+                <a href ="battle.html">
+                    <img id="symbol" alt="Symbol" src="assets/image.png">
+                </a>
         </div>
     </div>
 </body>
