Added level functionality in html and js

--- a/client/post.html
+++ b/client/post.html
@@ -22,6 +22,11 @@
         <input type="text" id="incorrect3" name="incorrect3" required><br>
         <input id="questionSubmit" type=submit value="submit"/>
       </form>
+      <a href="hub.html">
+        <button>
+     <p>Return to homepage</p>
+        </button>
+    </a>
 </body>
 </html>
 
