--- a/client/hub.html
+++ b/client/hub.html
@@ -35,7 +35,7 @@
             <div id="pannelBox">
                 <h2>Henry VIII</h2>
                 <img class="henry" alt="HenryVIII" src="assets/Henry.jpg">
-                <a href ="battle.html?difficulty=easy">
+                <a href ="battle.html?difficulty=medium">
                     <img id="symbolMedium" class="symbol" alt="Symbol" src="assets/image.png">
                 </a>
                 <p class="difficulty">Medium</p>
@@ -45,7 +45,7 @@
             <div id="pannelBox">
                 <h2>Henry VIII</h2>
                 <img class="henry" alt="HenryVIII" src="assets/Henry.jpg">
-                <a href ="battle.html?difficulty=easy">
+                <a href ="battle.html?difficulty=hard">
                     <img id="symbolHard" class="symbol" alt="Symbol" src="assets/image.png">
                 </a>
                 <p class="difficulty">Hard</p>
@@ -55,7 +55,7 @@
             <div id="pannelBox" class="levelBoxes">
                 <h2>Henry VIII</h2>
                 <img class="henry" alt="HenryVIII" src="assets/Henry.jpg">
-                <a href ="battle.html?difficulty=easy">
+                <a href ="battle.html?difficulty=boss">
                     <img id="symbolBoss" class="symbol" alt="Symbol" src="assets/image.png">
                 </a>
                 <p class="difficulty">Boss</p>
