adds button and message to return to home screen after game has ended

--- a/client/battle.html
+++ b/client/battle.html
@@ -16,6 +16,13 @@
     <button onclick="reduceHealth()">Attack</button>
     <div class="avatar1"></div>
     <div class="avatar2"></div>
+    <div id="endBox">
+        <p id="endMessage">Game over!</p>
+        <a href ="hub.html">
+            <button id="returnButton">Return to hub</button>
+        </a>
+        
+    </div>
     <section id="boardBox">
         <div id ="questionBox">
             <p id="questionNum"></p>
