stops health being reduced at the begginging

--- a/client/battle.html
+++ b/client/battle.html
@@ -21,8 +21,8 @@
         <a href ="hub.html">
             <button id="returnButton">Return to hub</button>
         </a>
-        
     </div>
+    <p id="start" >Start</p>
     <section id="boardBox">
         <div id ="questionBox">
             <p id="questionNum"></p>
