Added sprites and font-family styling

--- a/client/hub.html
+++ b/client/hub.html
@@ -6,7 +6,7 @@
     <title>Tudemon</title>
     <script defer src="hub.js"></script>
     <link rel="stylesheet" href="hub.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=MedievalSharp&display=swap" rel="stylesheet">
 </head>
 <body>
     <audio src="assets/Y2meta.app - King Henry VIII - Consort Music (128 kbps).mp3" autoplay>
@@ -23,8 +23,8 @@
     <div id="allOptions">
         <div id="boxEasy" class="levelBoxes">
             <div id="pannelBox">
-                <h2>Henry VIII</h2>
-                <img class="henry" alt="HenryVIII" src="assets/Henry.jpg"> 
+                <h2>Edward</h2>
+                <img class="henry" alt="HenryVIII" src="assets/edwardImage.jpg"> 
                 <a href ="battle.html?difficulty=easy">
                     <img id="symbolEasy" class="symbol" alt="Symbol" src="assets/image.png">
                 </a>
@@ -33,8 +33,8 @@
         </div>
         <div id="boxMedium" class="levelBoxes">
             <div id="pannelBox">
-                <h2>Henry VIII</h2>
-                <img class="henry" alt="HenryVIII" src="assets/Henry.jpg">
+                <h2>Elizabeth</h2>
+                <img class="henry" alt="HenryVIII" src="assets/elizabethImage.jpg">
                 <a href ="battle.html?difficulty=medium">
                     <img id="symbolMedium" class="symbol" alt="Symbol" src="assets/image.png">
                 </a>
@@ -43,8 +43,8 @@
         </div>
         <div id="boxHard" class="levelBoxes">
             <div id="pannelBox">
-                <h2>Henry VIII</h2>
-                <img class="henry" alt="HenryVIII" src="assets/Henry.jpg">
+                <h2>Mary</h2>
+                <img class="henry" alt="HenryVIII" src="assets/MaryImage.jpg">
                 <a href ="battle.html?difficulty=hard">
                     <img id="symbolHard" class="symbol" alt="Symbol" src="assets/image.png">
                 </a>
@@ -54,7 +54,7 @@
         <div id="boxBoss" class="levelBoxes">
             <div id="pannelBox" class="levelBoxes">
                 <h2>Henry VIII</h2>
-                <img class="henry" alt="HenryVIII" src="assets/Henry.jpg">
+                <img class="henry" alt="HenryVIII" src="assets/HenryImage.jpg">
                 <a href ="battle.html?difficulty=boss">
                     <img id="symbolBoss" class="symbol" alt="Symbol" src="assets/image.png">
                 </a>
