updates css for the battlescreen

--- a/client/battle.html
+++ b/client/battle.html
@@ -10,9 +10,16 @@
 </head>
 
 <body>
-    <progress class= "healthBar" value="100" max="100" id="henryHealth"></progress>
-    <br>
-    <progress class= "healthBar" value="100" max="100" id="studentHealth"></progress>
+    <section id="Bars">
+        <div id="tudor">
+            <p id="character">Tudors</p>
+            <progress class= "healthBar" value="100" max="100" id="henryHealth"></progress>
+        </div>
+        <div id="student">
+            <p>Player</p>
+            <progress class= "healthBar" value="100" max="100" id="studentHealth"></progress>
+        </div>
+    </section>  
     <div class="avatar1"></div>
     <div class="avatar2"></div>
     <div id="endBox">
@@ -21,7 +28,7 @@
             <button id="returnButton">Return to hub</button>
         </a>
     </div>
-    <p id="start" >Start</p>
+    <p id="start" >Begineth Battle!</p>
     <section id="boardBox">
         <div id ="questionBox">
             <p id="questionNum"></p>
