adds backgrounds and more styling for battle page

--- a/client/battle.html
+++ b/client/battle.html
@@ -20,8 +20,12 @@
             <progress class= "healthBar" value="100" max="100" id="studentHealth"></progress>
         </div>
     </section>  
-    <div class="avatar1"></div>
-    <div class="avatar2"></div>
+    <div id="tudorAvatar">
+        <img src="./assets/HenryAnimation.gif" alt="alt">
+    </div>
+    <div id="studentAvatar">
+        <img src="" alt="alt">
+    </div>
     <div id="endBox">
         <p id="endMessage">Game over!</p>
         <a href ="hub.html">
