adds tracking of oponent name and health values to the health bars

--- a/client/battle.html
+++ b/client/battle.html
@@ -13,10 +13,12 @@
     <section id="Bars">
         <div id="tudor">
             <p id="character">Tudors</p>
+            <p id="HealthH"></p>
             <progress class= "healthBar" value="100" max="100" id="henryHealth"></progress>
         </div>
         <div id="student">
-            <p>Player</p>
+            <p id="player">Player</p>
+            <p id="HealthS"></p>
             <progress class= "healthBar" value="100" max="100" id="studentHealth"></progress>
         </div>
     </section>  
