Completes form in post css

--- a/client/post.html
+++ b/client/post.html
@@ -24,7 +24,7 @@
         <input type="text" class="field" id="incorrect2" name="incorrect2" required><br>
         <label for="incorrect3">Incorrect3:</label><br>
         <input type="text" class="field" id="incorrect3" name="incorrect3" required><br>
-        <input id="questionSubmit" type=submit value="submit"/>
+        <input id="questionSubmit" type=submit value="Submit"/>
       </form>
       <a href="hub.html" class="icon-button">
         <button>
