Adds Henry with no background

--- a/client/post.html
+++ b/client/post.html
@@ -33,6 +33,9 @@
      </a>
      </div>  
     </div>
+    <div id="tudorAvatar">
+      <img src="./assets/HenryAnimation.gif" alt="alt">
+  </div>
 </div>
 </body>
 </html>
