--- a/client/battle.html
+++ b/client/battle.html
@@ -23,10 +23,10 @@
         </div>
     </section>  
     <div id="tudorAvatar">
-        <img id="tudorImg" src = "./assets/HenryAnimation.gif" alt="henry gif">
+        <img id="tudorImg" src = "./assets/HenryNoBackground.gif" alt="henry gif">
     </div>
     <div id="studentAvatar">
-        <img src="./assets/Studentanimation.gif" alt="student gif">
+        <img src="./assets/StudentNoBackground.gif" alt="student gif">
     </div>
     <div id="endBox">
         <p id="endMessage">Game over!</p>
