Adds  hub & post backgrund, changes boxes in hub css

--- a/client/hub.html
+++ b/client/hub.html
@@ -14,11 +14,14 @@
     <div id="titleBoxBackground">
         <div id="titleBox">
            <h1>Tudemon</h1>
+        </div>
+        <div id="postBox">
            <p>Click the button below to create your own question:</p>
            <a href="post.html">
             <button>Click here</button>
-        </a>
+           </a>
         </div>
+        
     </div>
     <div id="allOptions">
         <div id="boxEasy" class="levelBoxes">
