adds cleaned henry gif

--- a/client/battle.html
+++ b/client/battle.html
@@ -23,7 +23,7 @@
         </div>
     </section>  
     <div id="tudorAvatar">
-        <img id="tudorImg" src = "./assets/HenryNoBackground.gif" alt="henry gif">
+        <img id="tudorImg" src = "./assets/cleaned_henry.gif" alt="henry gif">
     </div>
     <div id="studentAvatar">
         <img src="./assets/StudentNoBackground.gif" alt="student gif">
