Completes post css

--- a/client/post.html
+++ b/client/post.html
@@ -13,17 +13,12 @@
     <div class="container">
      <div class="contentBox">
         <h1>Create Your Own Question</h1>
-        <form id="createQuestion">
-        <label for="question">Question:</label><br>
-        <input type="text" class="field" id="question" name="question" required><br>
-        <label for="correct">Correct:</label><br>
-        <input type="text" class="field" id="correct" name="correct" required><br>
-        <label for="incorrect1">Incorret1:</label><br>
-        <input type="text" class="field" id="incorrect1" name="incorrect1" required><br>
-        <label for="incorrect2">Incorrect2:</label><br>
-        <input type="text" class="field" id="incorrect2" name="incorrect2" required><br>
-        <label for="incorrect3">Incorrect3:</label><br>
-        <input type="text" class="field" id="incorrect3" name="incorrect3" required><br>
+      <form id="createQuestion">
+        <input type="text" class="field" id="question" name="question" placeholder="Question"required><br>
+        <input type="text" class="field" id="correct" name="correct" placeholder="Correct Answer" required><br>
+        <input type="text" class="field" id="incorrect1" name="incorrect1" placeholder="Incorrect Answer" required><br>
+        <input type="text" class="field" id="incorrect2" name="incorrect2" placeholder="Incorrect Answer" required><br>
+        <input type="text" class="field" id="incorrect3" name="incorrect3" placeholder="Incorrect Answer" required><br>
         <input id="questionSubmit" type=submit value="Submit"/>
       </form>
       <a href="hub.html" class="icon-button">
