Added battle sound

--- a/client/battle.html
+++ b/client/battle.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <audio src="assets/onlymp3.to - Pokemon Red Yellow Blue Battle Music Trainer-2Jmty_NiaXc-192k-1699544606.mp3" autoplay>
+    </audio>
     <section id="Bars">
         <div id="tudor">
             <p id="character">Tudors</p>
