changes battle screen css, udate different dificulty icons, cleans up files

--- a/client/hub.html
+++ b/client/hub.html
@@ -7,6 +7,7 @@
     <script defer src="hub.js"></script>
     <link rel="stylesheet" href="hub.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=MedievalSharp&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./assets/IconBoss.png" sizes="64x64">
 </head>
 <body>
     <audio src="assets/Y2meta.app - King Henry VIII - Consort Music (128 kbps).mp3" autoplay>
@@ -29,7 +30,7 @@
                 <h2>Edward</h2>
                 <img class="henry" alt="HenryVIII" src="assets/edwardImage.jpg"> 
                 <a href ="battle.html?difficulty=easy">
-                    <img id="symbolEasy" class="symbol" alt="Symbol" src="assets/image.png">
+                    <img id="symbolEasy" class="symbol" alt="Symbol" src="assets/EasyIcon.png">
                 </a>
                 <p class="difficulty">Easy</p>
             </div>
@@ -39,7 +40,7 @@
                 <h2>Elizabeth</h2>
                 <img class="henry" alt="HenryVIII" src="assets/elizabethImage.jpg">
                 <a href ="battle.html?difficulty=medium">
-                    <img id="symbolMedium" class="symbol" alt="Symbol" src="assets/image.png">
+                    <img id="symbolMedium" class="symbol" alt="Symbol" src="assets/MediumIcon.png">
                 </a>
                 <p class="difficulty">Medium</p>
             </div>
@@ -49,7 +50,7 @@
                 <h2>Mary</h2>
                 <img class="henry" alt="HenryVIII" src="assets/MaryImage.jpg">
                 <a href ="battle.html?difficulty=hard">
-                    <img id="symbolHard" class="symbol" alt="Symbol" src="assets/image.png">
+                    <img id="symbolHard" class="symbol" alt="Symbol" src="assets/HardIcon.png">
                 </a>
                 <p class="difficulty">Hard</p>
             </div>
@@ -59,7 +60,7 @@
                 <h2>Henry VIII</h2>
                 <img class="henry" alt="HenryVIII" src="assets/HenryImage.jpg">
                 <a href ="battle.html?difficulty=boss">
-                    <img id="symbolBoss" class="symbol" alt="Symbol" src="assets/image.png">
+                    <img id="symbolBoss" class="symbol" alt="Symbol" src="assets/IconBoss.png">
                 </a>
                 <p class="difficulty">Boss</p>
             </div>
