--- a/client/post.html
+++ b/client/post.html
@@ -7,6 +7,7 @@
     <script defer src="post.js"></script>
     <link rel="stylesheet" href="post.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=MedievalSharp&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./assets/IconBoss.png" sizes="64x64">
 </head>
 <body>
 <div class="main">
