change hub to index for deployment

--- a/client/battle.html
+++ b/client/battle.html
@@ -32,7 +32,7 @@
     </div>
     <div id="endBox">
         <p id="endMessage">Game over!</p>
-        <a href ="hub.html">
+        <a href ="index.html">
             <button id="returnButton">Return to hub</button>
         </a>
     </div>
