--- a/client/post.html
+++ b/client/post.html
@@ -22,7 +22,7 @@
         <input type="text" class="field" id="incorrect3" name="incorrect3" placeholder="Incorrect Answer" required><br>
         <input id="questionSubmit" type=submit value="Submit"/>
       </form>
-      <a href="hub.html" class="icon-button">
+      <a href="index.html" class="icon-button">
         <button>
      <p id="returnButton"></p>
         </button>
